<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Flashcards</string>
    <string name="show_accounts">My account</string>
    <string name="waiting">Please wait</string>
    <string name="exit">Exit</string>
    <string name="title_activity_login">Login</string>
    <string name="email">E-mail</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="login">Login</string>
    <string name="login_failed">Login failed!</string>
    <string name="login_successful">Login successful</string>
    <string name="logout">Logout</string>
    <string name="logout_successful">Logout successful</string>
    <string name="register">Register</string>
    <string name="register_failed">Registration failed!</string>
    <string name="register_successful">Successful registration</string>
    <string name="name_missing">Name is missing!</string>
    <string name="email_not_valid">E-mail is not valid!</string>
    <string name="pass_missing">Password is missing!</string>
    <string name="pass_unmatch">Passwords are not match!</string>
    <string name="failed_to_access_categories">Failed to access categories!</string>
    <string name="failed_to_access_cards">Failed to access cards!</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_register_user">Register</string>
    <string name="play_cards">Play cards</string>
    <string name="edit_cards">Edit cards</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_play_cards">Play Cards</string>
    <string name="title_activity_card_game">Card Game</string>
    <string name="title_activity_categories">Categories</string>
    <string name="title_activity_card_list">Cards</string>
    <string name="create_category_menu">New category</string>
    <string name="remove_category_menu">Remove category</string>
    <string name="unlock_category_menu">Unlock category</string>
    <string name="modify_category_menu">Modify category</string>
    <string name="share_category_menu">Share category</string>
    <string name="category_name">Category name</string>
    <string name="public_category">Public category</string>
    <string name="category_not_found">Category not found</string>
    <string name="card_not_found">Flashcard not found</string>
    <string name="card_not_selected">Flashcard not selected</string>
    <string name="create_card_menu">New card</string>
    <string name="remove_card_menu">Remove card</string>
    <string name="modify_card_menu">Modify card</string>
    <string name="card_front">Front side</string>
    <string name="card_back">Back side</string>
    <string name="answer">Answer</string>
    <string name="result">Result</string>
    <string name="points">Score</string>
    <string name="check">Check</string>
    <string name="next">Next</string>
    <string name="play_random_cards">Random cards</string>
    <string name="correct_answer">Correct answer!</string>
    <string name="wrong_answer">Wrong answer!</string>
    <string name="min_pass_length_is">Minimal password length is</string>
    <string name="characters">characters</string>
    <string name="category_shared">Category shared</string>
    <string name="share_instructions">Share the following link with your friends to let them access your category!</string>
    <string name="category_id">Category id</string>
    <string name="key">Key</string>
    <string name="category_unlocked">Category unlocked</string>
    <string name="invalid_link_format">Invalid link format</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    
</resources>
