<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.wordcardapp.CardListActivity" >

    <item
        android:id="@+id/create_card_menu"
        android:orderInCategory="100"
        android:title="@string/create_card_menu"/>
    
    <item
        android:id="@+id/remove_card_menu"
        android:orderInCategory="101"
        android:title="@string/remove_card_menu"/>
    
    <item
        android:id="@+id/remove_category_menu"
        android:orderInCategory="101"
        android:title="@string/remove_category_menu"/>
    
    <item
        android:id="@+id/modify_category_menu"
        android:orderInCategory="102"
        android:title="@string/modify_category_menu"/>
    
    <item
        android:id="@+id/share_category_menu"
        android:orderInCategory="103"
        android:title="@string/share_category_menu"/>

</menu>
