<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.wordcardapp.CardGameActivity" >

<LinearLayout 
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:textAppearance="?android:attr/textAppearanceLarge"
        	android:text="@string/card_front" />
        
        <TextView
            android:id="@+id/cardFrontTV"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:gravity="end"
        	android:textAppearance="?android:attr/textAppearanceLarge" />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:textAppearance="?android:attr/textAppearanceLarge"
        	android:text="@string/card_back" />

        <EditText
            android:id="@+id/cardBackET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" >

            <requestFocus />
        </EditText>
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:textAppearance="?android:attr/textAppearanceLarge"
        	android:text="@string/answer" />
        
        <TextView
            android:id="@+id/answerTV"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:gravity="end"
        	android:textAppearance="?android:attr/textAppearanceLarge" />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:textAppearance="?android:attr/textAppearanceLarge"
        	android:text="@string/result" />
        
        <TextView
            android:id="@+id/lastResultTV"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:gravity="end"
        	android:textAppearance="?android:attr/textAppearanceLarge" />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:textAppearance="?android:attr/textAppearanceLarge"
        	android:text="@string/points" />
        
        <TextView
            android:id="@+id/pointsTV"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:gravity="end"
        	android:textAppearance="?android:attr/textAppearanceLarge" />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/checkAnswerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/cewiblue"
            android:text="@string/check"
            android:layout_weight="50"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:onClick="onCheckAnswer" />

        <Button
            android:id="@+id/nextCardButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/cewiblue"
            android:layout_weight="50"
            android:text="@string/next"
            android:onClick="onNextCard" />
        
    </LinearLayout>

</LinearLayout>

</ScrollView>
