<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.wordcardapp.MenuActivity" >

<LinearLayout 
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <!-- <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="72sp"
        android:textStyle="bold"
        android:textColor="@color/cewiblue"
        android:layout_marginBottom="@dimen/activity_vertical_margin" /> -->

    <Button
        android:id="@+id/button1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/play_cards"
        android:background="@color/cewiblue"
        android:onClick="onPlayCards"
        android:layout_marginBottom="@dimen/activity_vertical_margin" />
    
    <Button
        android:id="@+id/button2"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/edit_cards"
        android:background="@color/cewiblue"
        android:onClick="onEditCards"
        android:layout_marginBottom="@dimen/activity_vertical_margin" />
    
    
    <Button
        android:id="@+id/logoutButton"
        android:onClick="onLogout"
        android:text="@string/logout"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@color/cewiblue"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" />

<!--     <TextView -->
<!--         android:id="@+id/textView1" -->
<!--         android:layout_width="wrap_content" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:autoLink="web" -->
<!--         android:text="https://testweb-gyurisb.azurewebsites.net/categories/10?key=kulcs" /> -->

</LinearLayout>
</ScrollView>